# marathon-bib-expo-service

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  insomnia-collection.json  pom.xml  prometheus.yml
.github/workflows/: ci.yml
ai-agent/: .env.example  .gitignore  agent.py  api.py  approval.py  auth.py  inspect_tool.py  main.py  pyproject.toml  read_chat.py  reset_chat.py  settings.py  usage.py
ai-agent/app/: __init__.py  dependencies.py  main.py  schemas.py
ai-agent/app/agent/: __init__.py  approval.py  attachments.py  builder.py  card.py  prefs.py  tool_visibility.py  usage.py
ai-agent/app/core/: __init__.py  auth.py  logging_config.py  settings.py
ai-agent/app/routers/: __init__.py  chat.py
ai-agent/scripts/: inspect_tool.py  read_chat.py  repl.py  reset_chat.py
grafana/provisioning/dashboards/: dashboard-provider.yml  spring-boot-dashboard.json
lambda/billing/: handler.py  requirements.txt
lambda/billing-stats/: handler.py  requirements.txt
scripts/: localstack-init.sh
src/main/java/com/timekeeper/bibexpo/: MarathonBibExpoApplication.java
src/main/java/com/timekeeper/bibexpo/annotation/: Auditable.java
src/main/java/com/timekeeper/bibexpo/aspect/: AuditAspect.java  AuditContextHolder.java
src/main/java/com/timekeeper/bibexpo/batch/: BatchJobNotificationListener.java  CsvRow.java  (+15 more)
src/main/resources/: application-prod.yaml  application.yaml  banner.txt
src/main/resources/prompts/: system-prompt.st
src/test/java/com/timekeeper/bibexpo/: MarathonBibExpoApplicationTests.java
(+808 files in other folders)
