[project]
name = "ai-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3-stubs~=1.43.36",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-aws>=1.1.1",
    "langsmith>=0.9.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
